test/spec/token.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/token.wast
(;; STDOUT ;;;
out/test/spec/token.wast:4: assert_malformed passed:
  out/test/spec/token/token.0.wat:1:14: error: unexpected token "i32.const0", expected an expr.
  (func (drop (i32.const0)))
               ^^^^^^^^^^
out/test/spec/token.wast:8: assert_malformed passed:
  out/test/spec/token/token.1.wat:1:10: error: unexpected token "0drop", expected a numeric index or a name (e.g. 12 or $foo).
  (func br 0drop)
           ^^^^^
out/test/spec/token.wast:86: assert_malformed passed:
  out/test/spec/token/token.19.wat:1:41: error: unexpected token "0$l", expected a var (e.g. 12 or $foo).
  (func (block $l (i32.const 0) (br_table 0$l)))
                                          ^^^
out/test/spec/token.wast:92: assert_malformed passed:
  out/test/spec/token/token.20.wat:1:41: error: unexpected token "0$"l"", expected a var (e.g. 12 or $foo).
  (func (block $l (i32.const 0) (br_table 0$"l")))
                                          ^^^^^
out/test/spec/token.wast:102: assert_malformed passed:
  out/test/spec/token/token.22.wat:1:41: error: undefined label variable "$l0"
  (func (block $l (i32.const 0) (br_table $l0)))
                                          ^^^
out/test/spec/token.wast:108: assert_malformed passed:
  out/test/spec/token/token.23.wat:1:41: error: unexpected token "$"l"0", expected a var (e.g. 12 or $foo).
  (func (block $l (i32.const 0) (br_table $"l"0)))
                                          ^^^^^
out/test/spec/token.wast:118: assert_malformed passed:
  out/test/spec/token/token.25.wat:1:41: error: undefined label variable "$l$l"
  (func (block $l (i32.const 0) (br_table $l$l)))
                                          ^^^^
out/test/spec/token.wast:124: assert_malformed passed:
  out/test/spec/token/token.26.wat:1:41: error: unexpected token "$"l"$l", expected a var (e.g. 12 or $foo).
  (func (block $l (i32.const 0) (br_table $"l"$l)))
                                          ^^^^^^
out/test/spec/token.wast:144: assert_malformed passed:
  out/test/spec/token/token.30.wat:1:2: error: unexpected token "data"a"", expected a module field or a module.
  (data"a")
   ^^^^^^^
  out/test/spec/token/token.30.wat:1:9: error: unexpected token ), expected EOF.
  (data"a")
          ^
out/test/spec/token.wast:154: assert_malformed passed:
  out/test/spec/token/token.32.wat:1:7: error: unexpected token $l"a", expected ).
  (data $l"a")
        ^^^^^
out/test/spec/token.wast:164: assert_malformed passed:
  out/test/spec/token/token.34.wat:1:7: error: unexpected token $l" a", expected ).
  (data $l" a")
        ^^^^^^
out/test/spec/token.wast:174: assert_malformed passed:
  out/test/spec/token/token.36.wat:1:7: error: unexpected token $l"a ", expected ).
  (data $l"a ")
        ^^^^^^
out/test/spec/token.wast:184: assert_malformed passed:
  out/test/spec/token/token.38.wat:1:7: error: invalid string token
  (data $l"a ""b")
        ^^^^^^
  out/test/spec/token/token.38.wat:1:7: error: unexpected token $l"a ""b", expected ).
  (data $l"a ""b")
        ^^^^^^^^^
out/test/spec/token.wast:194: assert_malformed passed:
  out/test/spec/token/token.40.wat:1:7: error: unexpected token $l"", expected ).
  (data $l"")
        ^^^^^^^^^^
out/test/spec/token.wast:204: assert_malformed passed:
  out/test/spec/token/token.42.wat:1:7: error: unexpected token $l" ", expected ).
  (data $l" ")
        ^^^^^^^^^^^
out/test/spec/token.wast:214: assert_malformed passed:
  out/test/spec/token/token.44.wat:1:7: error: unexpected token $l" ", expected ).
  (data $l" ")
        ^^^^^^^^^^^
out/test/spec/token.wast:224: assert_malformed passed:
  out/test/spec/token/token.46.wat:1:7: error: invalid string token
  (data "a""b")
        ^^^
  out/test/spec/token/token.46.wat:1:7: error: unexpected token Invalid, expected ).
  (data "a""b")
        ^^^
out/test/spec/token.wast:234: assert_malformed passed:
  out/test/spec/token/token.48.wat:1:7: error: invalid string token
  (data "a"" b")
        ^^^
  out/test/spec/token/token.48.wat:1:7: error: unexpected token Invalid, expected ).
  (data "a"" b")
        ^^^
out/test/spec/token.wast:244: assert_malformed passed:
  out/test/spec/token/token.50.wat:1:7: error: invalid string token
  (data "a ""b")
        ^^^^
  out/test/spec/token/token.50.wat:1:7: error: unexpected token Invalid, expected ).
  (data "a ""b")
        ^^^^
out/test/spec/token.wast:254: assert_malformed passed:
  out/test/spec/token/token.52.wat:1:7: error: invalid string token
  (data """")
        ^^^^^^^^
  out/test/spec/token/token.52.wat:1:7: error: unexpected token Invalid, expected ).
  (data """")
        ^^^^^^^^
out/test/spec/token.wast:264: assert_malformed passed:
  out/test/spec/token/token.54.wat:1:7: error: invalid string token
  (data """ ")
        ^^^^^^^^
  out/test/spec/token/token.54.wat:1:7: error: unexpected token Invalid, expected ).
  (data """ ")
        ^^^^^^^^
out/test/spec/token.wast:274: assert_malformed passed:
  out/test/spec/token/token.56.wat:1:7: error: invalid string token
  (data " """)
        ^^^^^^^^^
  out/test/spec/token/token.56.wat:1:7: error: unexpected token Invalid, expected ).
  (data " """)
        ^^^^^^^^^
out/test/spec/token.wast:282: assert_malformed passed:
  out/test/spec/token/token.57.wat:1:7: error: unexpected token "a", expected ).
  (func "a"x)
        ^^^
  out/test/spec/token/token.57.wat:1:10: error: unexpected token x.
  (func "a"x)
           ^
out/test/spec/token.wast:288: assert_malformed passed:
  out/test/spec/token/token.58.wat:1:7: error: unexpected token "a", expected ).
  (func "a"0)
        ^^^
out/test/spec/token.wast:294: assert_malformed passed:
  out/test/spec/token/token.59.wat:1:7: error: unexpected token 0"a", expected ).
  (func 0"a")
        ^^^^
out/test/spec/token.wast:300: assert_malformed passed:
  out/test/spec/token/token.60.wat:1:7: error: unexpected token "a", expected ).
  (func "a"$x)
        ^^^
61/61 tests passed.
;;; STDOUT ;;)
